--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
 title: OggCamp 2018 Repository
 name: Mike Hingley
-email: computa_mike@hotmil.compose
+email: computa_mike@hotmail.com
 baseurl: ""
-url: http://luugiathuy.com
+url: http://www.titaniumbunker.com
 description: This is the OggCamp 2018 repository.
 twitter_username: computa_mike
 github_username: computa_mike
