--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,8 +2,8 @@
 title: OggCamp 2018 Repository
 name: Mike Hingley
 email: computa_mike@hotmail.com
-baseurl: "https://computamike.github.io/oggcamp-2018"
-url: "http://www.titaniumbunker.com"
+baseurl: ""
+url: "https://computamike.github.io/oggcamp-2018/"
 description: This is the OggCamp 2018 repository.
 twitter_username: computa_mike
 github_username: computa_mike
