--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,7 +2,7 @@
 title: OggCamp 2018 Repository
 name: Mike Hingley
 email: computa_mike@hotmail.com
-baseurl: "/foobar"
+baseurl: "/oggcamp-2018"
 url: "https://computamike.github.io/oggcamp-2018/"
 description: This is the OggCamp 2018 repository.
 twitter_username: computa_mike
