* Adding a Site Author / Page author support for slides. * Fixed Incorrect description

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -7,7 +7,7 @@ url: "https://computamike.github.io/oggcamp-2018/"
 description: This is the OggCamp 2018 repository.
 twitter_username: computa_mike
 github_username: computa_mike
-
+author: Mike Hingley
 # Build settings
 # markdown: kramdown
 # permalink: /:year/:month/:title/
